@@ -21,6 +21,8 @@ version 1.0.8
   correlation-robust standard errors, if significant at the 5
   per cent level
 - Fix brokenness in saving boxplots to session file
+- Refinements to CSV import function -- handle space-separated
+  data with multiple/variable spaces between columns
 
 04/09/03 version 1.0.7
 - Correct the attribution of autocorrelation test (Breusch-Godfrey
